--- a/index.html
+++ b/index.html
@@ -2,8 +2,17 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title></title>
+
+  <meta http-equiv="X-UA-Compatible" content="IE=Edge">
+
+  <title>PowerPen</title>
+<meta name="MobileOptimized" content="yes">
+  <meta name="HandheldFriendly" content="yes">
+  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+  <meta name="theme-color" content="#F44336">
+  <meta name="mobile-web-app-capable" content="yes">
+  <link rel="manifest" href="./manifest.json">
+
 </head>
 <body>
      <button class="add-button">Add to home screen</button>
