--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 <meta name="MobileOptimized" content="yes">
   <meta name="HandheldFriendly" content="yes">
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-  <meta name="theme-color" content="#F44336">
+  <meta name="theme-color" content="#9C27B0">
   <meta name="mobile-web-app-capable" content="yes">
   <link rel="manifest" href="./manifest.json">
-
+<link rel="favicon" href="./img/icon.png">
 </head>
 <body>
      <button class="add-button">Add to home screen</button>
