--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
   <meta name="theme-color" content="#9C27B0">
   <meta name="mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-capable" content="yes">
   <link rel="manifest" href="./manifest.json">
-<link rel="favicon" href="./img/icon.png">
+<link rel="icon" type="image/png" href="./img/icon.png">
 </head>
 <body>
      <button class="add-button">Add to home screen</button>
