--- a/index.html
+++ b/index.html
@@ -1,22 +1,24 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 <head>
   <meta charset="UTF-8">
-
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
-
   <title>PowerPen</title>
-<meta name="MobileOptimized" content="yes">
+  <meta name="MobileOptimized" content="yes">
   <meta name="HandheldFriendly" content="yes">
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
   <meta name="theme-color" content="#9C27B0">
   <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-capable" content="yes">
   <link rel="manifest" href="./manifest.json">
-<link rel="icon" type="image/png" href="./img/icon.png">
+  <link rel="icon" type="image/png" href="./img/icon.png">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+  <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-     <button class="add-button">Add to home screen</button>
+  <button class="add-button">Add to home screen</button>
 </body>
-<script src="main.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/blobysoftware/GeckoJs/gecko.min.js"></script>
+<script src="./js/main.js"></script>
 </html>
