--- a/index.html
+++ b/index.html
@@ -14,11 +14,47 @@
   <link rel="icon" type="image/png" href="./img/icon.png">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
   <button class="add-button">Add to home screen</button>
+   <nav> <div class="nav-wrapper"> <a href="#!" class="brand-logo">Logo</a> <a href="#" data-target="slide-out" class="sidenav-trigger"><i class="material-icons">menu</i></a> <ul class="right hide-on-med-and-down"> <li><a href="sass.html">Sass</a></li> <li><a href="badges.html">Components</a></li> <li><a href="collapsible.html">Javascript</a></li> <li><a href="mobile.html">Mobile</a></li> </ul> </div> </nav>
+   <ul id="slide-out" class="sidenav"> <li>
+      <div class="user-view">
+        <div class="background">
+          <img src="images/office.jpg">
+        </div> 
+        <a href="#user">
+          <img class="circle" src="images/yuna.jpg">
+        </a>
+        <a href="#name">
+          <span class="white-text name">John Doe</span>
+        </a>
+        <a href="#email">
+          <span class="white-text email">jdandturk@gmail.com</span>
+        </a>
+      </div>
+     </li>
+     <li>
+       <a href="#!">
+         <i class="material-icons">cloud</i>First Link With Icon</a>
+     </li>
+     <li>
+       <a href="#!">Second Link</a>
+     </li>
+     <li>
+       <div class="divider"></div>
+     </li>
+     <li>
+       <a class="subheader">Subheader</a>
+     </li> 
+     <li>
+       <a class="waves-effect" href="#!">Third Link With Waves</a>
+     </li> 
+   </ul> 
+   
+  
 </body>
-<script src="https://cdn.jsdelivr.net/gh/blobysoftware/GeckoJs/gecko.min.js"></script>
 <script src="./js/main.js"></script>
 </html>
