--- a/index.html
+++ b/index.html
@@ -27,35 +27,40 @@
    <ul id="slide-out" class="sidenav"> <li>
       <div class="user-view">
         <div class="background">
-          <img src="images/office.jpg">
+          <img src="./img/classroom2.jpg">
         </div> 
         <a href="#user">
-          <img class="circle" src="images/yuna.jpg">
+          <img class="circle" src="./img/user2.jpg">
         </a>
-        <a href="#name">
-          <span class="white-text name">John Doe</span>
+        <a href="#name" class="userInfo">
+          <span class="name">Alex Santos</span>
+           <span class="email">as62971@gmail.com</span>
         </a>
-        <a href="#email">
-          <span class="white-text email">jdandturk@gmail.com</span>
-        </a>
+       
       </div>
      </li>
      <li>
        <a href="#!">
-         <i class="material-icons">cloud</i>First Link With Icon</a>
+         <i class="material-icons">import_contacts</i>Notes</a>
      </li>
      <li>
-       <a href="#!">Second Link</a>
+      <a href="#!">
+         <i class="material-icons">style</i>Classes</a>
      </li>
      <li>
        <div class="divider"></div>
      </li>
      <li>
-       <a class="subheader">Subheader</a>
+       <a class="subheader">Account</a>
      </li> 
-     <li>
-       <a class="waves-effect" href="#!">Third Link With Waves</a>
+     <li class="fb">
+       <a class="waves-effect" href="#!">Sign in with Facebook</a>
      </li> 
+       <li class="google">
+
+       <a class="waves-effect" href="#!">Sign in with Google</a>
+
+     </li>
    </ul> 
    
   
