Add floating button

--- a/index.html
+++ b/index.html
@@ -41,29 +41,29 @@
      </li>
      <li>
        <a href="#!">
-         <i class="material-icons">import_contacts</i>Notes</a>
+         <i class="material-icons">import_contacts</i>Notas</a>
      </li>
      <li>
       <a href="#!">
-         <i class="material-icons">style</i>Classes</a>
+         <i class="material-icons">style</i>Clases</a>
      </li>
      <li>
        <div class="divider"></div>
      </li>
      <li>
-       <a class="subheader">Account</a>
+       <a class="subheader">Cuenta</a>
      </li> 
      <li class="fb">
-       <a class="waves-effect" href="#!">Sign in with Facebook</a>
+       <a class="waves-effect" href="#!">Iniciar sesión con Facebook</a>
      </li> 
        <li class="google">
 
-       <a class="waves-effect" href="#!">Sign in with Google</a>
+       <a class="waves-effect" href="#!">Iniciar sesión con Google</a>
 
      </li>
    </ul> 
    
-  
+   <a class="btn-floating btn-large waves-effect waves-light grey"><i class="material-icons">add</i></a>
 </body>
 <script src="./js/main.js"></script>
 </html>
