--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
   <link rel="manifest" href="./manifest.json">
   <link rel="icon" type="image/png" href="./img/icon.png">
+    <link rel="favicon" type="image/png" href="./img/icon.png">
+    <link rel="apple-touch-icon" href="./img/icon.png" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -20,7 +22,8 @@
   <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-  <button class="add-button">Add to home screen</button>
+   <button class="add-button">Add to home screen</button>
+  
    <nav> <div class="nav-wrapper"> <a href="#!" class="brand-logo"><img src="./img/logoP.png">PowerPen</a> <a href="#" data-target="slide-out" class="sidenav-trigger"><i class="material-icons">menu</i></a>
    <a href="#" class="right searchBtn"><i class="material-icons">search</i></a>
    </div>
@@ -60,6 +63,13 @@
        <li class="google">
 
        <a class="waves-effect" href="#!">Iniciar sesión con Google</a>
+
+     </li>
+     <li class="download">
+
+
+<a href="#" class="waves-effect">
+       <i class="material-icons">file_download</i>Descargar app</a>
 
      </li>
    </ul> 
