--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
   <title>PowerPen</title>
+  <meta name="Author" content="AlexSantos">
+  <meta name="Robots" content="follow">
   <meta name="description" content="PowerPen is an OpenSource app for upload homeworks, docs, and share education content, it's built from students to students.">
   <meta name="MobileOptimized" content="yes">
   <meta name="HandheldFriendly" content="yes">
