--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="Author" content="AlexSantos">
   <meta name="Robots" content="follow">
   <meta name="description" content="PowerPen is an OpenSource app for upload homeworks, docs, and share education content, it's built from students to students.">
-  <meta property="og:image" content="./img/icon.png" />      
+  <meta property="og:image" content="./img/icon.png">      
     
   <meta name="MobileOptimized" content="yes">
   <meta name="HandheldFriendly" content="yes">
