--- a/index.html
+++ b/index.html
@@ -24,6 +24,11 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
   <link rel="stylesheet" href="./css/style.css">
+  
+<meta property="og:title" content="PowerPen" />
+    <meta property="og:description" content="PowerPen is an OpenSource app for upload homeworks, docs, and share education content, it's built from students to students." />
+    <meta property="og:image" content="./img/banner.jpg" />      
+    <meta property="og:url" content="httpss://alexsan134.github.io/PowerPen" />
 </head>
 <body>
    <button class="add-button">Add to home screen</button>
