--- a/index.html
+++ b/index.html
@@ -27,8 +27,12 @@
   
 <meta property="og:title" content="PowerPen" />
     <meta property="og:description" content="PowerPen is an OpenSource app for upload homeworks, docs, and share education content, it's built from students to students." />
-    <meta property="og:image" content="./img/banner.jpg" />      
+    <meta property="og:image" content="httpss://alexsan134.github.io/PowerPen/img/banner.jpg" />      
     <meta property="og:url" content="httpss://alexsan134.github.io/PowerPen" />
+    <meta property=”og:type” content=”website” />
+    <meta property="fb:app_id" content="1342183889264144" />
+
+
 </head>
 <body>
    <button class="add-button">Add to home screen</button>
