--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <meta property="og:description" content="PowerPen is an OpenSource app for upload homeworks, docs, and share education content, it's built from students to students." />
     <meta property="og:image" content="https://alexsan134.github.io/PowerPen/img/banner.jpg" />      
     <meta property="og:url" content="https://alexsan134.github.io/PowerPen" />
-    <meta property=”og:type” content=”product.item” />
+    <meta property=”og:type” content=”website” />
     <meta property="fb:app_id" content="1342183889264144" />
 </head>
 <body>
