--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <meta property="og:image" content="https://alexsan134.github.io/PowerPen/img/banner.jpg" />      
     <meta property="og:url" content="https://alexsan134.github.io/PowerPen" />
     <meta property="og:site_name" content="PowerPen"/>
-    <meta property=”og:type” content=”powerpen/website” />
+    <meta property="og:type" content="powerpen/website" />
     <meta property="fb:app_id" content="1342183889264144" />
 </head>
 <body>
