--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
-<head prefix="powerpen: https://alexsan134.github.io">
+<head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
   <title>PowerPen</title>
@@ -29,7 +29,7 @@
     <meta property="og:image" content="https://alexsan134.github.io/PowerPen/img/banner.jpg" />      
     <meta property="og:url" content="https://alexsan134.github.io/PowerPen" />
     <meta property="og:site_name" content="PowerPen"/>
-    <meta property="og:type" content="powerpen/website" />
+    <meta property="og:type" content="website" />
     <meta property="fb:app_id" content="1342183889264144" />
 </head>
 <body>
