--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
   <title>PowerPen</title>
+  <meta name="keywords" content="education, homeworks, university, usac, USAC, ingeniería, u, universidad, fiusac">
   <meta name="Author" content="AlexSantos">
   <meta name="Robots" content="follow">
   <meta name="description" content="PowerPen is an OpenSource app for upload homeworks, docs, and share education content, it's built from students to students.">
@@ -33,7 +34,7 @@
     <meta property="fb:app_id" content="1342183889264144" />
 </head>
 <body>
-   <button class="add-button">Add to home screen</button>
+   
   
    <nav> <div class="nav-wrapper"> <a href="#!" class="brand-logo"><img src="./img/logoP.png">PowerPen</a> <a href="#" data-target="slide-out" class="sidenav-trigger"><i class="material-icons">menu</i></a>
    <a href="#" class="right searchBtn"><i class="material-icons">search</i></a>
@@ -63,29 +64,36 @@
          <i class="material-icons">style</i>Clases</a>
      </li>
      <li>
+          <li>
+
+      <a href="#!">
+
+         <i class="material-icons">cast</i>Noticias</a>
+     </li>
+     <li>
        <div class="divider"></div>
      </li>
      <li>
        <a class="subheader">Cuenta</a>
      </li> 
-     <li class="fb">
-       <a class="waves-effect" href="#!">Iniciar sesión con Facebook</a>
-     </li> 
-       <li class="google">
+      <li>
 
-       <a class="waves-effect" href="#!">Iniciar sesión con Google</a>
+      <a href="#!">
 
+         <i class="material-icons">logout</i>Cerrar sesión</a>
      </li>
+     <li>
      <li class="download">
 
 
-<a href="#" class="waves-effect">
+<a href="#" class="waves-effect add-button">
        <i class="material-icons">file_download</i>Descargar app</a>
 
      </li>
    </ul> 
    
-   <a class="btn-floating btn-large waves-effect waves-light grey"><i class="material-icons">add</i></a>
+   <a class="btn-floating btn-large waves-effect waves-light grey"><i class="material-icons">create</i></a>
+   <script src="./js/main.js"></script>
 </body>
-<script src="./js/main.js"></script>
+
 </html>
