--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
       <a href="#!">
 
-         <i class="material-icons">cast</i>Noticias</a>
+         <i class="material-icons">event_note</i>Noticias</a>
      </li>
      <li>
        <div class="divider"></div>
