Add news component

--- a/index.html
+++ b/index.html
@@ -94,13 +94,20 @@
       </a>
     </li>
   </ul> 
-  <a class="btn-floating btn-large waves-effect waves-light grey">
+  <a class="btn-floating btn-large waves-effect waves-dark grey">
     <i class="material-icons">create</i>
   </a>
    <!--- COMPONENTS -->
-   
-   
-   
+  <main id="content">
+    <news-feed 
+      title="Be somebody by 3 Doors Down Lyrics" 
+      desc='The shades go up Mothers staring down She dont know where hes been Or how long hes been out She said, "Boy, Im tired of waiting up While youre out with your friends" He said, "Mom, Im trying And Im living my life the best way that I can" "Cause Im trying to be somebody" Im not trying to be somebody'
+      img="./img/example.jpg">
+    </news-feed>
+    
+  </main>
+  
   <script src="./js/main.js"></script>
+  <script src="./app.js"></script>
 </body>
 </html>
