--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
   <meta name="mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <link rel="manifest" href="./manifest.json">
-  <link rel="icon" type="image/png" href="./img/icon.png">
-  <link rel="favicon" type="image/png" href="./img/icon.png">
-  <link rel="apple-touch-icon" href="./img/icon.png" />
+  <link rel="icon" type="image/png" href="./img/iconN.png">
+  <link rel="favicon" type="image/png" href="./img/iconN.png">
+  <link rel="apple-touch-icon" href="./img/iconN.png" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -37,8 +37,7 @@
   <nav>
     <div class="nav-wrapper">
       <a href="#!" class="brand-logo">
-        <img src="./img/logoP.png">
-      PowerPen</a>
+        <img src="./img/logoN.png"> owerPen</a>
       <a href="#" data-target="slide-out" class="sidenav-trigger">
         <i class="material-icons">menu</i>
       </a>
