--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <link rel="stylesheet" href="./css/style.css">
   <meta property="og:title" content="PowerPen" />
   <meta property="og:description" content="PowerPen is an OpenSource app for upload homeworks, docs, and share education content, it's built from students to students." />
-  <meta property="og:image" content="https://alexsan134.github.io/PowerPen/img/banner.jpg" />      
+  <meta property="og:image" content="https://alexsan134.github.io/PowerPen/img/banner3.jpg" />      
   <meta property="og:url" content="https://alexsan134.github.io/PowerPen" />
   <meta property="og:site_name" content="PowerPen"/>
   <meta property="og:type" content="website" />
@@ -83,7 +83,7 @@
       <a class="subheader">Cuenta</a>
     </li> 
     <li>
-      <a href="#!">
+      <a href="">
        <i class="material-icons">logout</i>Cerrar sesión
      </a>
     </li>
@@ -98,14 +98,13 @@
   </a>
    <!--- COMPONENTS -->
   <main id="content">
-    <news-feed 
+   <news-feed 
       title="Be somebody by 3 Doors Down Lyrics" 
       desc='The shades go up Mothers staring down She dont know where hes been Or how long hes been out She said, "Boy, Im tired of waiting up While youre out with your friends" He said, "Mom, Im trying And Im living my life the best way that I can" "Cause Im trying to be somebody" Im not trying to be somebody'
       img="./img/example.jpg">
-    </news-feed>
-    
+    </news-feed> 
   </main>
-  
+
   <script src="./js/main.js"></script>
   <script src="./app.js"></script>
 </body>
