--- a/index.html
+++ b/index.html
@@ -84,6 +84,13 @@
     </li> 
     <li>
       <a href="">
+       <i class="material-icons">settings</i>Configuracion
+     </a>
+    </li>
+     <li>
+
+      <a href="">
+
        <i class="material-icons">logout</i>Cerrar sesión
      </a>
     </li>
@@ -98,11 +105,19 @@
   </a>
    <!--- COMPONENTS -->
   <main id="content">
-   <news-feed 
+    <news-feed 
       title="Be somebody by 3 Doors Down Lyrics" 
       desc='The shades go up Mothers staring down She dont know where hes been Or how long hes been out She said, "Boy, Im tired of waiting up While youre out with your friends" He said, "Mom, Im trying And Im living my life the best way that I can" "Cause Im trying to be somebody" Im not trying to be somebody'
       img="./img/example.jpg">
-    </news-feed> 
+    </news-feed>  
+    <div class="card">
+       <span data-badge-caption="nuevos" class="new badge blue">4</span>
+      <div class="card-content">
+        <h5 class="black-text bold" >Matemática Básica 1</h5> <h6>Semestre Sección F</h6></div>
+       <div class="card-action"> <a href="#"><i class="material-icons">filter_none</i>Ver archivos</a> 
+        <a href="#"><i class="material-icons">share</i>Compartir</a></div> 
+                  </div>
+                 
   </main>
 
   <script src="./js/main.js"></script>
