--- a/index.html
+++ b/index.html
@@ -87,10 +87,8 @@
        <i class="material-icons">settings</i>Configuracion
      </a>
     </li>
-     <li>
-
+    <li>
       <a href="">
-
        <i class="material-icons">logout</i>Cerrar sesión
      </a>
     </li>
@@ -110,16 +108,18 @@
       desc='The shades go up Mothers staring down She dont know where hes been Or how long hes been out She said, "Boy, Im tired of waiting up While youre out with your friends" He said, "Mom, Im trying And Im living my life the best way that I can" "Cause Im trying to be somebody" Im not trying to be somebody'
       img="./img/example.jpg">
     </news-feed>  
-    <div class="card">
-       <span data-badge-caption="nuevos" class="new badge blue">4</span>
-      <div class="card-content">
-        <h5 class="black-text bold" >Matemática Básica 1</h5> <h6>Semestre Sección F</h6></div>
-       <div class="card-action"> <a href="#"><i class="material-icons">filter_none</i>Ver archivos</a> 
-        <a href="#"><i class="material-icons">share</i>Compartir</a></div> 
-                  </div>
-                 
+    <note 
+      name="Social Humanística 1 "
+      desc="Tarea número 4"
+      img="./img/example2.jpg"
+      total="5">
+    </note>
+    <class 
+      name="Técnicas de estudio e investigación"
+      desc="Semestre Sección F"
+      not="3">
+    </class>
   </main>
-
   <script src="./js/main.js"></script>
   <script src="./app.js"></script>
 </body>
