--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <i class="material-icons">search</i>
       </a>
        <form>
-         <input type="search" id="searchInput" placeholder="Buscar artículos, tareas">
+         <input type="search" id="searchInput" placeholder="Buscar artículos">
        </form>
     </div>
       </nav>
