--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
   <!-- MAIN UI -->
   <nav id="navbar">
     <div class="nav-wrapper">
-      <a href="#!" class="brand-logo">
+      <a role="button" class="brand-logo">
         <img src="./img/logoN.png"><span>owerPen</span></a>
-      <a href="#!" data-target="slide-out" class="sidenav-trigger">
+      <a role="button" data-target="slide-out" class="sidenav-trigger">
         <i class="material-icons">menu</i>
       </a>
-      <a href="#!" id="searchBtn" class="searchBtn right">
+      <a role="button" id="searchBtn" class="searchBtn right">
         <i class="material-icons">search</i>
       </a>
        <form>
@@ -57,27 +57,27 @@
         <div class="background">
           <img src="./img/classroom2.jpg">
         </div> 
-        <a href="#!">
+        <a role="button">
           <img class="circle" src="./img/user2.jpg">
         </a>
-        <a href="#!" class="userInfo">
+        <a role="button" class="userInfo">
           <span class="name">Alex Santos</span>
           <span class="email">as62971@gmail.com</span>
         </a>
       </div>
     </li>
     <li>
-      <a href="#!">
+      <a role="button">
        <i class="material-icons">import_contacts</i>Notas
       </a>
     </li>
     <li>
-      <a href="">
+      <a role="button">
        <i class="material-icons">style</i>Clases
       </a>
     </li>
     <li>
-      <a href="#!">
+      <a role="button">
        <i class="material-icons">event_note</i>Noticias
       </a>
     </li>
@@ -89,17 +89,17 @@
    <a class="subheader">Cuenta</a>
     </li> 
     <li>
-      <a href="#!">
+      <a role="button">
        <i class="material-icons">settings</i>Configuracion
      </a>
     </li>
     <li>
-      <a href="#!">
+      <a role="button">
        <i class="material-icons">logout</i>Cerrar sesión
      </a>
     </li>
     <li class="download">
-      <a href="#!" class="waves-effect add-button">
+      <a role="button" class="waves-effect add-button">
         <i class="material-icons">file_download</i>Descargar app
       </a>
     </li>
