--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
      <a class="btn waves-effect gll col s12"><i class="socicon-google"></i> &nbsp;Iniciar con Google</a>
      </div>
     </form>
-  <script src="https://cdn.jsdelivr.net/npm/vue"></script>
+<script src="https://cdn.jsdelivr.net/npm/vue@2.6.10/dist/vue.min.js"></script>
   <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
   <script src="./js/main.js"></script>
