--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
     <li>
       <div class="user-view">
         <div class="background">
-          <img src="./img/classroom2.jpg">
+          <img src="./img/classrooms.jpg">
         </div> 
         <a role="button">
-          <img class="circle" src="./img/user2.jpg">
+          <img class="circle" src="./img/users.jpg">
         </a>
         <a role="button" class="userInfo">
           <span class="name">Alex Santos</span>
