--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
   <link rel="favicon" type="image/png" href="./img/iconN.png">
   <link rel="apple-touch-icon" href="./img/iconN.png" />
   <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-
   <link rel="stylesheet" href="./css/style.css">
   <meta property="og:title" content="PowerPen" />
   <meta property="og:description" content="PowerPen is an OpenSource app for upload homeworks, docs, and share education content, it's built from students to students." />
@@ -38,7 +38,7 @@
     <div class="nav-wrapper">
       <a role="button" class="brand-logo">
         <img src="./img/logoN.png"><span>owerPen</span></a>
-      <a role="button" data-target="slide-out" class="sidenav-trigger">
+      <a role="button" data-target="slide-out" class="sidenav-trigger menuIcon">
         <i class="material-icons">menu</i>
       </a>
       <a role="button" id="searchBtn" class="searchBtn right">
@@ -184,7 +184,6 @@
     </form>
 
   <link rel="stylesheet" href="https://d1azc1qln24ryf.cloudfront.net/114779/Socicon/style-cf.css?u8vidh">
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/vue@2.6.10/dist/vue.min.js"></script>
   <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
