--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <meta property="og:site_name" content="PowerPen"/>
   <meta property="og:type" content="website" />
   <meta property="fb:app_id" content="1342183889264144" />
-
+  <script src="//cdn.jsdelivr.net/npm/eruda"></script>
 </head>
 <body>
   <!-- MAIN UI -->
@@ -66,7 +66,7 @@
     </li>
     <li>
       <a role="button">
-       <i class="material-icons">import_contacts</i>Notas
+       <i class="material-icons">import_contacts</i>Recursos
       </a>
     </li>
     <li>
@@ -92,7 +92,7 @@
      </a>
     </li>
     <li>
-      <a role="button">
+      <a role="button" id="logout">
        <i class="material-icons">logout</i>Cerrar sesión
      </a>
     </li>
