--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <meta property="og:site_name" content="PowerPen"/>
   <meta property="og:type" content="website" />
   <meta property="fb:app_id" content="1342183889264144" />
-  <script src="//cdn.jsdelivr.net/npm/eruda"></script>
+  <!--<script src="//cdn.jsdelivr.net/npm/eruda"></script>-->
 </head>
 <body>
   <!-- MAIN UI -->
